TEST_PROGRAMS/VALID/04/tricky-chained.go
package main

func main() {
	var x = 1
	x = +-+-+-+-x
}
