TEST_PROGRAMS/INVALID/15/declaration2.go
package main

var x int = 1
if x > 1 {
  println("Huh?")
}
